# Project-Drive-Core

./: .gitignore  AGENTS.md  Makefile  README.md
.ai/: README.md  architecture_summary.md  current_phase.md  project_context.md  session_log.md
.cursor/: ENGINEERING_CONSTITUTION.mdc
.cursor/rules/: 00_project_role.mdc  01_engineering_rules.mdc  02_engineering_skills.mdc  03_task_execution.mdc  04_review_process.mdc  05_component_selection.mdc  06_documentation_standard.mdc  07_firmware_standard.mdc  08_hardware_standard.mdc  09_protocol_standard.mdc  10_safety_standard.mdc  README.md  coding-standard.mdc  communication-protocols.mdc  component-selection.mdc  documentation-standard.mdc  drivecore-engineering.mdc  (+5 more)
agents_stuff/: CODE_LAYOUT_PLAN.md  DOC_CHECKLIST.md  DOC_PROGRESS.md  LINKS.md  MODULE_MAP.md  README.md  SESSION_NOTES.md  config_binary_v0.1.md  dcpi_structs_v0.1.md  devkit_bench_v0.1.md  ecu_can_messages_v0.1.md  thermal_notes_v0.1.md  web_ui_routes_v0.1.md
docs/: 000_Project_Vision.md  001_System_Architecture.md  002_DCC_Hardware.md  003_ECU_Architecture.md  004_Communication_Protocol.md  005_Configuration_Model.md  006_Web_Interface.md  007_Component_Selection.md  008_Testing_and_Validation.md  009_Roadmap.md  COMPONENT_QUALIFICATION_PROCESS.md  CONCEPT_GEN1_SUMMARY.md  ENGINEERING_VALUES.md  ENGINEERING_WORKFLOW.md  PROJECT_PHILOSOPHY.md  REVIEW_PROCESS.md
firmware/shared/: CMakeLists.txt  README.md
firmware/shared/include/drivecore/: config_blob.h  crc16.h  dcpi.h  proto.h
firmware/shared/src/: crc16.c
firmware/shared/tests/: test_crc16.c
(+187 files in other folders)
